--- a/web/index.html
+++ b/web/index.html
@@ -15,5 +15,8 @@
 
   <div id="output"></div>
   <div id="gameDiv"></div>
+  <div id="startGame">start</div>
+  <div id="endGame">end</div>
+  
 </body>
 </html>
