cavas added (could be better)

--- a/web/index.html
+++ b/web/index.html
@@ -47,13 +47,17 @@
   </div>
   <div id="output">Game is Paused</div>
   <div id="gameDiv"></div>
-  <button id="startGame">start</button>
-  <button id="endGame">stop</button>
-  <Label>xAxis size:</Label>
-  <input type="number" value="0" id="newRow" class="inputAxis">
-  <Label>yAxis size:</Label>
-  <input type="number" value="0" id="newCol" class="inputAxis">
-  <button id="resizeBtn"> Resize</button>  
-  <button id="resetBtn"> Reset</button>  
+  <div>
+    <button id="startGame">start</button>
+    <button id="endGame">stop</button>
+    <Label>xAxis size:</Label>
+    <input type="number" value="0" id="newRow" class="inputAxis">
+    <Label>yAxis size:</Label>
+    <input type="number" value="0" id="newCol" class="inputAxis">
+    <button id="resizeBtn"> Resize</button>  
+    <button id="resetBtn"> Reset</button>  
+  </div>
+  <div id="containerForCanvas">
+  </div>
 </body>
 </html>
